--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -61,38 +61,34 @@ h3 { font-weight: normal; font-size: 30px; color: #303030; margin: 0px; }
 #HomePage #homepage .speakers .link { text-align: right; padding-top: 20px; text-decoration: underline; }
 
 /*SessionsHolder -------------------------------------------------- */
+#SessionsHolder { /*Search Bar Styling */ }
 #SessionsHolder #wrap { background: #f3f3f3; }
-#SessionsHolder #sessionholder .sessions { background: white; border-left: 1px #d8d8d8 solid; margin-left: 9px; padding-left: 20px; padding-right: 20px; background: white; border-top: 1px #d8d8d8 solid; padding-top: 30px; height: 100%; }
-#SessionsHolder #sessionholder .sessions .heading { padding-left: 10px; }
-#SessionsHolder #sessionholder .sessions .session-bottom { width: 100%; text-align: center; }
-#SessionsHolder #sessionholder .filter { padding-top: 20px; background: #f3f3f3; margin-left: -46%; padding-left: 46%; margin-right: -10%; }
-#SessionsHolder #sessionholder .filter form #Text input { width: 70%; }
-#SessionsHolder #sessionholder .filter form .Actions input { height: 43px; text-transform: uppercase; font-size: 12px; letter-spacing: 1px; }
+#SessionsHolder .sessions { background: white; border: 1px #d8d8d8 solid; margin-left: 9px; padding-left: 20px; padding-right: 20px; background: white; border-top: 1px #d8d8d8 solid; padding-top: 30px; height: 100%; }
+#SessionsHolder .sessions .heading { padding-left: 10px; }
+#SessionsHolder .sessions .button { text-align: center; }
+#SessionsHolder .filter { padding-top: 20px; background: #f3f3f3; margin-left: -46%; padding-left: 46%; margin-right: -10%; }
+#SessionsHolder .filter form #Text input { width: 70%; }
+#SessionsHolder .filter form .Actions input { height: 43px; text-transform: uppercase; font-size: 12px; letter-spacing: 1px; }
 #SessionsHolder #searchbar { border: none; }
-#SessionsHolder #searchbar .search .mglass { margin-left: -5px; }
-#SessionsHolder #searchbar .search form { margin-left: -10px; }
+#SessionsHolder #searchbar .mglass { margin-left: -5px; }
+#SessionsHolder #searchbar form { margin-left: -10px; }
 #SessionsHolder #searchbar .logo { margin-left: 5px; }
 
 /*Sessions -------------------------------------------------- */
 .sessions { padding-bottom: 50px; }
-.sessions h3 { font-weight: normal; font-size: 30px; color: #303030; margin: 0px; }
 .sessions .link { text-align: right; padding-top: 10px; }
-.sessions .link .btn { color: white; padding: 10px 10px; text-transform: uppercase; font-size: 12px; letter-spacing: 1px; }
-.sessions .session-tile { border: 1px solid #d8d8d8; margin-bottom: 20px; }
-.sessions .session-tile .video { height: 130px; max-height: 130px; /*	width: 210px;*/ }
+.sessions .link .btn { color: white; }
+.sessions .session-tile { padding-bottom: 0px; border: 1px solid #d8d8d8; margin-bottom: 20px; }
+.sessions .session-tile .video { height: 150px; max-height: 150px; }
 .sessions .session-tile .text-wrap { margin: 5px; color: #696b6f; font-size: 12px; }
 .sessions .session-tile .text-wrap p { padding: 0; margin: 0; }
 .sessions .session-tile .text-wrap a { color: #42a1fc; }
-.sessions .session-tile .text-wrap .location { font-size: 12px; }
-.sessions .session-tile .text-wrap .location a { color: #42a1fc; }
-.sessions .session-tile .text-wrap .date { color: #696b6f; font-size: 12px; font-weight: 500; }
-.sessions .session-tile .text-wrap .tags { padding-top: 10px; color: #696b6f; font-size: 13px; font-weight: 500; }
-.sessions .session-tile .text-wrap .tags a { font-weight: normal; }
 
 /* session controller --------------------------------------------------*/
 #ses-wrap { padding-top: 30px; }
 #ses-wrap .content div { padding-bottom: 20px; }
-#ses-wrap .content h5 { color: #359bfc; font-size: 16px; }
+#ses-wrap .content h5 { font-size: 16px; }
+#ses-wrap .content span.blue { font-weight: bold; color: #359bfc; font-size: 16px; }
 #ses-wrap .content p { padding-bottom: 10px; }
 #ses-wrap .video { height: 300px; }
 #ses-wrap .session-side a { text-decoration: underline; }
@@ -112,10 +108,12 @@ h3 { font-weight: normal; font-size: 30px; color: #303030; margin: 0px; }
 
 /*Responsiveness -------------------------------------------------- */
 /*  Responsive: Large desktop and up*/
-@media (min-width: 1200px) { video { height: 130px; max-height: 130px; width: 260px; }
+@media (min-width: 1200px) { video { height: 160px; max-height: 160px; width: 260px; }
   #SessionsHolder #searchbar { border: none; }
   #SessionsHolder #searchbar .search .mglass { margin-left: -15px; }
   #SessionsHolder #searchbar .search form { margin-left: -20px; }
   #SessionsHolder #searchbar .logo { margin-left: 5px; } }
+@media (max-width: 767px) { #searchbar .search #Search input { width: 75%; }
+  #searchbar .search .Actions { width: 19%; } }
 @media (min-width: 768px) and (max-width: 979px) { #searchbar .search #Search input { width: 75%; }
   #searchbar .search .Actions { width: 19%; } }
