--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -50,7 +50,9 @@ h3 { font-weight: normal; font-size: 30px; color: #303030; margin: 0px; }
 
 .btn { padding: 10px 10px; text-transform: uppercase; font-size: 12px; letter-spacing: 1px; }
 
-.subtext { color: #696b6f; font-size: 12px; }
+.subtext { color: #696b6f; }
+
+.small { font-size: 12px; }
 
 /*HomePage -------------------------------------------------- */
 #HomePage .content { padding-top: 50px; padding-bottom: 50px; }
@@ -61,7 +63,7 @@ h3 { font-weight: normal; font-size: 30px; color: #303030; margin: 0px; }
 #HomePage .speakers { padding-bottom: 50px; }
 #HomePage .speakers .link { text-align: right; padding-top: 20px; text-decoration: underline; }
 
-/*SessionsHolder -------------------------------------------------- */
+/*sionsHolder -------------------------------------------------- */
 #SessionsHolder { /*Search Bar Styling */ }
 #SessionsHolder #wrap { background: #f3f3f3; }
 #SessionsHolder .sessions { background: white; border: 1px #d8d8d8 solid; margin-left: 9px; padding-left: 20px; padding-right: 20px; background: white; border-top: 1px #d8d8d8 solid; padding-top: 30px; height: 100%; }
@@ -105,6 +107,11 @@ h3 { font-weight: normal; font-size: 30px; color: #303030; margin: 0px; }
 #MeetingsHolder #meetings-wrap a:hover { text-decoration: none; }
 
 /* meeting -------------------------------------------------- */
+#MeetingController .header { border-bottom: 1px #d8d8d8 solid; padding-top: 30px; padding-bottom: 10px; margin-bottom: 10px; }
+#MeetingController .links { padding-bottom: 10px; margin-bottom: 10px; border-bottom: 1px #d8d8d8 solid; }
+#MeetingController .links a { text-decoration: underline; }
+#MeetingController .links .social { padding-top: 20px; }
+#MeetingController .links .social .fb-like { margin-top: 1px; }
 #MeetingController #speakers-wrap .thumbnail > img { margin-left: 0; margin-right: 0; }
 
 /* thumbnails -------------------------------------------------- */
