IGF-5: Styled MeetingController

--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -12,6 +12,10 @@ body {
 	background-color: white;
 	min-height: 100%;
 	position: relative;
+
+	a{
+		cursor: pointer;
+	}
 }
 
 /* Navigation -------------------------------------------------- */
