--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -3,6 +3,7 @@
 html { height: 100%; }
 
 body { background-color: white; min-height: 100%; position: relative; }
+body a { cursor: pointer; }
 
 /* Navigation -------------------------------------------------- */
 #navigation .navbar-inner { background: #303030; }
