--- a/themes/igf/scss/_variables.scss
+++ b/themes/igf/scss/_variables.scss
@@ -8,13 +8,14 @@
 
 
 // Grays
-// -------------------------
+// -------------------------919294
 $black:                 #000 !default;
 $grayDarkest:            #303030; 
 $grayDarker:             #5E5E5E;
 $grayDark:				 #535353;
-$grayMedium:			#D8D8D8;
 $gray:                  #696B6F;
+$grayFade:				#919294;
+$grayMedium:			#D8D8D8;
 $grayLight:             #E0E0E0; 
 $grayLighter:           #F3F3F3;
 $white:                 #fff !default;
