--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -11,6 +11,8 @@ a { cursor: pointer; }
 
 h3 { font-weight: normal; font-size: 30px; color: #303030; margin: 0px; }
 
+h4 { font-weight: 500; }
+
 .btn { padding: 10px 10px; text-transform: uppercase; font-size: 12px; letter-spacing: 1px; }
 
 .subtext { color: #919294; }
