--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -77,7 +77,7 @@ b { font-weight: 500; }
 #SessionsHolder .filter h5 { color: #359bfc; font-size: 15px; }
 #SessionsHolder .filter form label { font-weight: bold; }
 #SessionsHolder .filter form ul { list-style-type: none; }
-#SessionsHolder .filter form ul input[type="checkbox"] { margin-top: 0px; border: none; background: white; }
+#SessionsHolder .filter form ul input { margin-top: 0px; }
 #SessionsHolder .filter form ul label { font-weight: normal; display: inline-block; }
 #SessionsHolder .filter form .Actions input { height: 43px; text-transform: uppercase; font-size: 12px; letter-spacing: 1px; }
 #SessionsHolder #searchbar { border: none; }
