--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -80,6 +80,7 @@ b { font-weight: 500; }
 #SessionsHolder .filter form ul input { margin-top: 0px; }
 #SessionsHolder .filter form ul label { font-weight: normal; display: inline-block; }
 #SessionsHolder .filter form .Actions input { height: 43px; text-transform: uppercase; font-size: 12px; letter-spacing: 1px; }
+#SessionsHolder .tags { padding-bottom: 30px; }
 #SessionsHolder #searchbar { border: none; }
 #SessionsHolder #searchbar .mglass { margin-left: -5px; }
 #SessionsHolder #searchbar form { margin-left: -10px; }
