--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -173,7 +173,7 @@ b{
 
 	.logo{
 		text-align: right;
-		padding-top: 10px;
+		padding-top: 15px;
 	}
 }
 
@@ -537,6 +537,9 @@ b{
 		a{
 			text-decoration: none;
 		}
+	}
+	.ses{
+		padding-top: 10px;
 	}
 
 	.links{
