--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -116,6 +116,8 @@ b { font-weight: 500; }
 #ses-wrap .video { height: 300px; }
 #ses-wrap .session-side a { text-decoration: underline; }
 #ses-wrap .session-side div { padding-bottom: 5px; }
+#ses-wrap .view-count { padding: 15px 0 5px 0; background-color: #f3f3f3; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
+#ses-wrap .view-count b { font-size: 1.5em; }
 
 /* meetings holder -------------------------------------------------- */
 #MeetingsHolder .promo { background: #f3f3f3; border: 1px solid #d8d8d8; -webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0; margin-top: 30px; margin-bottom: 20px; }
