--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -6,7 +6,7 @@ body { background-color: white; min-height: 100%; position: relative; }
 body #wrap { min-height: 810px; }
 
 /* Generic Classes -------------------------------------------------- */
-a { cursor: pointer; }
+a { cursor: pointer; transition: all 0.2s linear; }
 
 .heading { padding-bottom: 10px; }
 
