--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -21,7 +21,8 @@ body {
 
 /* Generic Classes -------------------------------------------------- */
 a{
-		cursor: pointer;
+	cursor: pointer;
+	transition: all 0.2s linear;
 }
 .heading{
 	padding-bottom: 10px;
