--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -82,7 +82,7 @@ b { font-weight: 500; }
 #SessionsHolder .filter { padding-top: 20px; background: #f3f3f3; margin-left: -46%; padding-left: 46%; margin-right: -10%; }
 #SessionsHolder .filter h5 { color: #359bfc; font-size: 15px; }
 #SessionsHolder .filter form label { font-weight: bold; }
-#SessionsHolder .filter form ul { list-style-type: none; }
+#SessionsHolder .filter form ul { list-style-type: none; margin-left: 0px; }
 #SessionsHolder .filter form ul input { margin-top: 0px; }
 #SessionsHolder .filter form ul label { font-weight: normal; display: inline-block; }
 #SessionsHolder .filter form .Actions input { height: 43px; text-transform: uppercase; font-size: 12px; letter-spacing: 1px; }
